# common/api/model/index.ts
@@ -120,6 +120,9 @@ export * from './review';
 export * from './reviewCreateDTO';
 export * from './reviewDTO';
 export * from './seenMatches';
+export * from './seenMatchesCreateDTO';
+export * from './seenMatchesDTO';
+export * from './seenMatchesDTOAPIResponse';
 export * from './skill';
 export * from './skillDTO';
 export * from './skillDTOAPIResponse';
